PR/50441: Manuel Bouyer: hash seq enumeration skips keys on big data. XXX: pullup-7